# deal_finder

./: .dockerignore  .gitignore  ARCHITECTURE_DECISION.md  CHANGES.md  CHANGES_SUMMARY.md  CLOUDFLARE_BLOCKING_SOLUTION.md  CLOUD_DEPLOYMENT.md  COST_OPTIMIZATION.md  DEPLOYMENT.md  Dockerfile  EXHAUSTIVE_MODE.md  FILTER_OPTIMIZATION.md  FINAL_ARCHITECTURE.md  FINAL_RECOMMENDATIONS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  HOW_PERPLEXITY_WORKS.md  HYBRID_ARCHITECTURE.md  INCREMENTAL_CRAWLING.md  LICENSE  MODEL_SELECTION.md  Makefile  OPTIMIZATIONS_SUMMARY.md  PIPELINE_FLOW.md  PROMPTS_AND_FILTERS.md  QUICKSTART.md  QUICK_START.md  README.md  README_PERPLEXITY.md  RESTRUCTURING_SUMMARY.md  RUN_HYBRID.md  SPEED_UP_GUIDE.md  START_HERE.md  STATUS.md  TEST_OPTIONS.md  TWO_STEP_WORKFLOW.md  UI_GUIDE.md  aws_spot_setup.sh  build_cache.py  check_cache.py  (+24 more)
archived/: main.py
config/: aliases.json  config.yaml  generated_keywords.json  production.yaml
deal_finder/: __init__.py  config_loader.py  keyword_filter.py  llm_prefilter.py  models.py  monitoring.py  perplexity_client.py  ta_bootstrapper.py
deploy/: railway.json  schedule.sh
docs/: DEPLOYMENT.md  PRODUCTION_SETUP.md  QUICK_START.md
scripts/: README.md  crawl.py  embed.py  embed_fast.py  reset_and_embed_fast.py  setup_cron_chroma.sh  start_ui.sh  test_full_pipeline_sample.py  update.py
static/: app.js  index.html  style.css
tests/: __init__.py  test_canonicalizer.py  test_deduplicator.py  test_fx_converter.py  test_hybrid.py  test_integration.py  test_money_parser.py  test_perplexity_extraction.py  (+2 more)
(+57 files in other folders)
