[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deal-finder"
version = "1.0.0"
description = "Early-stage biotech deals pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Deal Finder Team"}
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "openpyxl>=3.1.2",
    "pydantic>=2.5.0",
    "PyYAML>=6.0.1",
    "python-dateutil>=2.8.2",
    "langdetect>=1.0.9",
    "deep-translator>=1.11.4",
    "forex-python>=1.8",
    "tenacity>=8.2.3",
    "ratelimit>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "freezegun>=1.4.0",
]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.12.0",
]

[project.scripts]
deal-finder = "deal_finder.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=deal_finder --cov-report=term-missing --timeout=10"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools.packages.find]
include = ["deal_finder*"]
exclude = ["config*"]
